partially finish revising

--- a/writedown/zm/paper.water/si.tex
+++ b/writedown/zm/paper.water/si.tex
@@ -38,7 +38,7 @@
   A Critical Appraisal of the Zero-Multiple Method: Structural,
 Thermodynamic, Dielectric, and Dynamical Properties of a Water System}
 \author{Han Wang}
-\email{han.wang@fu-berlin.de}
+\email{wang_han@iapcm.ac.cn}
 \affiliation{CAEP Software Center for High Performance Numerical Simulation, Huayuan Road
 6, 100088 Beijing, China}
 \affiliation{Zuse Institute Berlin (ZIB), Germany}
@@ -64,6 +64,14 @@ Osaka 565-0871, Japan}
 Saitama 351-0198, Japan}
 
 % A Critical Appraisal of Zero-Multiple Method in Classical Water Simulation}
+
+\begin{figure}[]
+\centering
+\includegraphics[width=0.5\textwidth]{fig/result.nvt/fig-press.eps}\\
+\caption{A typical pressure trajectory. Simulated with system $L_1$ and SPME electrostatic method.}
+\label{fig:pres-l1}
+\end{figure}
+
 
 \begin{figure}[]
 \centering
@@ -147,6 +155,15 @@ same size as the SPME, so they are not presented in the figure for clarity.
   splitting parameter dependency in calculating the RDF.
   The orders of ZM method  $l=2$ (b)  and $l=3$ (c) are presented.
   In both plots the cut-off radius is 1.2~nm. }
+\label{fig:gkr-conv-alpha}
+\end{figure}
+
+
+\begin{figure}[tbp]
+\centering
+\includegraphics[]{fig/result.nvt/fig-rdf-cutoff.eps}\\
+\caption{  The comparison between the RDF calculated by RF method with group and atom cut-off schemes.
+The results of SPME and ZM $l=1$ are also presented for comparison.}
 \label{fig:gkr-conv-alpha}
 \end{figure}
 
