--- a/writedown/zm/paper.water/main.tex
+++ b/writedown/zm/paper.water/main.tex
@@ -3,6 +3,7 @@
 %\documentclass[aip,jcp,a4paper,preprint,unsortedaddress,onecolumn,fleqn]{revtex4-1}
 % \input{tcilatex}
 % \input{tcilatex}
+% \input{tcilatex}
 
 
 \documentclass[a4paper,preprint,unsortedaddress,onecolumn,fleqn]{revtex4}
@@ -19,7 +20,7 @@
 %TCIDATA{Codepage=932}
 %TCIDATA{<META NAME="SaveForMode" CONTENT="1">}
 %TCIDATA{BibliographyScheme=BibTeX}
-%TCIDATA{LastRevised=Thursday, November 13, 2014 17:19:51}
+%TCIDATA{LastRevised=Monday, December 01, 2014 18:07:38}
 %TCIDATA{<META NAME="GraphicsSave" CONTENT="32">}
 %TCIDATA{Language=American English}
 
@@ -38,13 +39,15 @@
 \newcommand{\systemla}{L_0}
 \newcommand{\systemlbp}{L'_1}
 \newcommand{\systemlb}{L_1}
-% \input{tcilatex}
+
+
+
 \begin{document}
 
 \title{A Critical Appraisal of the Zero-Multiple Method: Structural,
 Thermodynamic, Dielectric, and Dynamical Properties of a Water System}
 \author{Han Wang}
-\email{han.wang@fu-berlin.de}
+\email{wang_han@iapcm.ac.cn}
 \affiliation{CAEP Software Center for High Performance Numerical Simulation, Huayuan Road
 6, 100088 Beijing, China}
 \affiliation{Zuse Institute Berlin (ZIB), Germany}
@@ -90,17 +93,17 @@ The structure of the paper.
 Introduction of the ZM method, formula...[ {\color{blue} COMMENT: I can
 write here later}]
 
-{\color{red} If we want to discuss the issue of cut-off method, a short
-introduction of the group cut-off v.s.~the atom cut-off method. (will
-discuss the implementation in gromacs later) }[ {\color{blue} COMMENT: what
-do you mean? {\color{red} I mean the explanation of group and atomistic
-cut-off method. the traditional gromacs uses group cut-off as default. We
-need instead the atomistic cut-off}}] [ {\color{blue} COMMENT: OK, the
-matter for {traditional gromacs} will be discussed in Sec. IIIB, and the
-relevant matter of ZM will be discussed around $\bigstar ${\ in Sec. IIIB.
-If we feel the resulted descriptions are too detailed, they will go to SI.}] 
-} [{\color{red} please see the red part in Sec. III B. The order of the
-paragraphs are also rearranged.}][ {\color{blue} I added comments.}]
+% {\color{red} If we want to discuss the issue of cut-off method, a short
+% introduction of the group cut-off v.s.~the atom cut-off method. (will
+% discuss the implementation in gromacs later) }[ {\color{blue} COMMENT: what
+% do you mean? {\color{red} I mean the explanation of group and atomistic
+% cut-off method. the traditional gromacs uses group cut-off as default. We
+% need instead the atomistic cut-off}}] [ {\color{blue} COMMENT: OK, the
+% matter for {traditional gromacs} will be discussed in Sec. IIIB, and the
+% relevant matter of ZM will be discussed around $\bigstar ${\ in Sec. IIIB.
+% If we feel the resulted descriptions are too detailed, they will go to SI.}] 
+% } [{\color{red} please see the red part in Sec. III B. The order of the
+% paragraphs are also rearranged.}][ {\color{blue} I added comments.}]
 
 \section{Material and Methods}
 
@@ -150,31 +153,35 @@ implementation) with time-scale $\tau _{P}=0.5$~ps to equilibrate the system
 at 1~Bar. All systems were integrated with leap-frog scheme at a time-step
 of $0.001$~ps.
 
-[{%
-\color{blue} COMMENT: I am confusing. Is "rcoulomb"="rlist" default in
-gromacs? If so, "Gromacs by default uses the group cut-off scheme" is
-correct. Or, here, you want to say the "neighbor list making" is done by
-group cut-off? (I reread your "cutoff.pdf")} \recheck{
-In the main text I only mention the ``group cut-off'' and ``atom cut-off'' and
-put how to implement them in the Appendix.  So those who are not familiar with Gromacs would not be confused by the Gormacs terminology (e.g. rlist, rcoulomb, ...).
-see the revise below:
-}]
+% [{\color{blue} COMMENT: I am confusing. Is "rcoulomb"="rlist" default in
+% gromacs? If so, "Gromacs by default uses the group cut-off scheme" is
+% correct. Or, here, you want to say the "neighbor list making" is done by
+% group cut-off? (I reread your "cutoff.pdf")} {\color{red} In the main text I
+% only mention the \textquotedblleft group cut-off\textquotedblright\ and
+% \textquotedblleft atom cut-off\textquotedblright\ and put how to implement
+% them in the Appendix. So those who are not familiar with Gromacs would not
+% be confused by the Gormacs terminology (e.g. rlist, rcoulomb, ...). see the
+% revise below: }][ {\color{blue} I see and also modified. check it.]}
 
-The neighbor lists were updated every 5 time-steps. The Gromacs
-by default uses the group cut-off scheme, while the ZM method suggests an
-atom cut-off scheme~\cite{fukuda2011molecular,fukuda2013zero}. The difference between these
-cut-off schemes is discussed in detail in e.g.~Ref.~\cite%
+The neighbor lists were updated every 5 time-steps. The Gromacs by default
+uses the group cut-off scheme, while the ZM method recommends
+an atom cut-off scheme~\cite{fukuda2011molecular,fukuda2013zero}. The difference between these cut-off
+schemes is discussed in detail in e.g.~Ref.~\cite%
 {hunenberger1998alternative,baumketner2009removing}. We adopted the atom
 based cut-off scheme in the simulations using the SPME (short-range part)
-and ZM electrostatic methods, \recheck{while group cut-off scheme for RF.
-  We treated RF differently because the group cut-off scheme is the default scheme in Gromacs.}
-\recheck{The implementation details of the atom cut-off scheme in Gromacs are proivded in Appendix.~\ref{app:cut-off}.}
+and ZM electrostatic methods. The implementation details of the
+atom cut-off scheme in Gromacs are provided in Appendix.~\ref{app:cut-off}.
+The ZM method was implemented in Gromacs with the tabulated electrostatic
+interaction, and the interaction tables were generated by a home-made code. 
 
+We treated the RF with the group cut-off scheme because the
+group cut-off scheme is the default scheme in Gromacs. The experimental
+dielectric consistency $\varepsilon _{\text{rf}}=80$ was adopted for the RF
+method.
 % In order to mimic the atom cut-off scheme in
 % the Gromacs group cut-off implementation, the radius for neighbor list
 % updating was set ${0.3}$~nm larger than the cut-off radius (the maximum of
 % Coulomb cut-off and the van der Waals cut-off). 
-
 % The \textquotedblleft 
 % \texttt{group}\textquotedblright\ cut-off scheme in Gromacs was used.[ {\color{blue} COMMENT:
 % Yes,..., this is not easy to understand how we mimic AC. {\color{red} it
@@ -185,23 +192,18 @@ smoothed in a shell of $0.05$~nm width by the Gromacs \textquotedblleft
 \texttt{pme-switch}\textquotedblright\ method. The reciprocal space grid
 spacing was set to $0.06$~nm, with B-Spline interpolation order of $6$.
 These parameters were chosen to be more accurate than the Gromacs default
-choices (grid spacing $0.12$~nm and interpolation order $4$).
-The conducting boundary condition was used with SPME.
-The splitting parameter was optimized by the error estimate, which is
-implemented in Gromacs by tool \textquotedblleft \texttt{g\_pme\_error}%
-\textquotedblright ~\cite{wang2010optimizing}. The optimized real space and
-reciprocal space force computing errors were equally distributed as $%
-1.4\times 10^{-4}$~kJ/(mol nm). Since the magnitude of the forces are of
-order $10^{2}$~kJ/(mol nm), this force computing precision almost reaches
-the limit of the single-precision representation of the floating point
-numbers. % [ {\color{blue} COMMENT: Did you use the
+choices (grid spacing $0.12$~nm and interpolation order $4$). The conducting
+boundary condition was used with SPME. The splitting parameter was optimized
+by the error estimate, which is implemented in Gromacs by tool
+\textquotedblleft \texttt{g\_pme\_error}\textquotedblright ~\cite%
+{wang2010optimizing}. The optimized real space and reciprocal space force
+computing errors were equally distributed as $1.4\times 10^{-4}$~kJ/(mol
+nm). Since the magnitude of the forces are of order $10^{2}$~kJ/(mol nm),
+this force computing precision almost reaches the limit of the
+single-precision representation of the floating point numbers. 
+% [ {\color{blue} COMMENT: Did you use the
 % conducting boundary conditions? (maybe it is default in gromacs.) Please
 % state the thing.}]
-\recheck{The ZM method was implemented in Gromacs with the tabulated electrostatic
-interaction, and the interaction tables were generated by a home-made code.
-The experimental dielectric consistency  $\varepsilon _{\text{rf}}=80$
-was adopted for the RF method.}
-
 % In the simulations using RF method, the electrostatic interactions were cut-off in the
 % group manner (Gromacs default), so the radius for neighbor list updating is set identical to
 % the cut-off radius. [{\color{blue} COMMENT: Is "rcoulomb"="rlist" default
@@ -251,7 +253,7 @@ configurations for system $L_{0}$ and $L_{1}$. % The SPME
 %   special care, please modify.}]
 Using the density in the NVT simulation with SPME electrostatic, the
 pressure ($-0.4\pm 1.5$~Bar) is reproducing the target pressure of 1.0~Bar,
-which means the system is in desired thermodynamic state. 
+which means the system is in desired thermodynamic state.
 
 % The cut-off is smoothed from 1.85 to 1.90~nm by the
 % ``\texttt{switch}'' method provide by Gromacs
@@ -324,21 +326,20 @@ are in good consistency with the SPME results. In almost all cases the
 deviations from the SPME results are smaller than the statistical
 uncertainty. The RF was not so bad, but the results of the constant pressure
 molar heat capacity and the isothermal compressibility show considerable
-errors. The dependence of the ZM results on the order\ $l$\ is little. Although the splitting parameter, $\alpha $,
-also does not have significant influence on almost all these thermodynamic
-quantities for $l=1$, only the isothermal compressibility admits a weak
-dependence. Overall, the ZM\ agrees with the SPME results without any bias
-and out-performs the RF.
+errors. The dependence of the ZM results on the order\ $l$\ is little.
+Although the splitting parameter, $\alpha $, also does not have significant
+influence on almost all these thermodynamic quantities for $l=1$, only the
+isothermal compressibility admits a weak dependence. Overall, the ZM\ agrees
+with the SPME results without any bias and out-performs the RF.
 
-It should be noticed that in the calculation of the chemical
-potential, the energy correction plays an important role. In the case of $%
-l=1 $, $\alpha =0.0\,\text{nm}^{-1}$, it contributes $-0.1$~kJ/mol to the
-final result. By increasing $l$ or $\alpha $, this contribution becomes more
-significant, and reaches $-0.6$~kJ/mol for $l=4$, $\alpha =0.0\,\text{nm}%
-^{-1}$, and $-1.0$~kJ/mol for $l=1$, $\alpha =2.0\,\text{nm}^{-1}$,
-respectively. [{\color{blue}COMMENT: We will clarify what is the "energy
-correction" after making SecII, and describe the relation to IPSp after
-making Appendix B.}] 
+It should be noticed that in the calculation of the chemical potential, the
+energy correction plays an important role. In the case of $l=1$, $\alpha
+=0.0\,\text{nm}^{-1}$, it contributes $-0.1$~kJ/mol to the final result. By
+increasing $l$ or $\alpha $, this contribution becomes more significant, and
+reaches $-0.6$~kJ/mol for $l=4$, $\alpha =0.0\,\text{nm}^{-1}$, and $-1.0$%
+~kJ/mol for $l=1$, $\alpha =2.0\,\text{nm}^{-1}$, respectively. [{%
+\color{blue}COMMENT: We will clarify what is the "energy correction" after
+making SecII, and describe the relation to IPSp after making Appendix B.}]
 
 \begin{figure}[tbp]
 \centering
@@ -350,11 +351,15 @@ The black solid line indicates the magnitude of the correct pressure: 1~Bar.
 The error bars present the statistical uncertainty at 95\% confidence level. 
 {\color{red} This uncertainty is twice of the standard deviation of the
 estimates (which are averages along MD trajectories) that is calculated by
-the block average method~\protect\cite{janke2002statistical}.} [ {\ 
-\color{blue}It maybe good to repeat such explanation in Sec.IIIA.}].[{\ 
-\color{blue} another COMMENT: In these figures, can we see the statistical
-uncertainty of the pressure obtained by the SPME? Viz., I found no error
-bars for SPME.} \recheck{NO SPME result is given in this figure, 1 Bar is the target pressure.}]}
+the block average method~\protect\cite{janke2002statistical}.}
+% [ {\ 
+% \color{blue}It maybe good to repeat such explanation in Sec.IIIA.}].[{\ 
+% \color{blue} another COMMENT: In these figures, can we see the statistical
+% uncertainty of the pressure obtained by the SPME? Viz., I found no error
+% bars for SPME.} {\color{red} NO SPME result is given in this figure, 1 Bar
+% is the target pressure.}][{\color{blue} Can I konw the the statistical
+% uncertainty of the pressure obtained by the SPME?}]
+}
 \label{fig:pres-comp}
 \end{figure}
 
@@ -400,24 +405,37 @@ sensitive to $\alpha $ up to $1.0\,\text{nm}^{-1}$.
 It should be noted that even with the system $L_{0}$ that contains 13824
 water molecules, the fluctuation (measured by standard deviation) of the
 pressure is roughly 100~Bar, which means that it is very difficult to
-achieve very accurate estimate for this quantity.
-\recheck{In practice a pressure
-error of 20~Bar will only cause a
-density deviation (calculated by the NPT simulations) of roughly 0.1\%.
-Taking different orders ZM method at cut-off 1.2~nm for example,
-the density deviations are 0.051\%, 0.061\%, 0.097\% and 0.146\% for $l=1,2,3$ and 4, respectively.
-For $l\leq 3$ the pressure error is less than 20~Bar, while for $l=4$ the pressure error is less than 30~Bar (see Fig.~\ref{fig:pres-comp}).
-} 
+achieve very accurate estimate for this quantity.  In practice a
+pressure error of 20~Bar will only cause a density deviation (calculated by
+the NPT simulations) of roughly 0.1\%. Taking different orders ZM method at
+cut-off 1.2~nm for example, the density deviations are 0.051\%, 0.061\%,
+0.097\% and 0.146\% for $l=1,2,3$ and 4, respectively. For $l\leq 3$ the
+pressure error is less than 20~Bar, while for $l=4$ the pressure error is
+less than 30~Bar (see Fig.~\ref{fig:pres-comp}). 
 
-[{\color{blue} COMMENT1: Can we have a
-trajectory figure of the pressure? It will show that the fluctuation is
-large and the 10 Bar error for ZM looks small. If there is a suitable one,
-it may be good to put it in SI.} \recheck{Could you explain why? The SD should be enough for our purpose.}] [ {\color{blue} COMMENT2: Can we have some
-data on the (mass) density? Some potential users of ZM\ may worry about the
-deviation of the density from the reality due to the pressure error. I
-remember that the density error for ZM was small. It is helpful to show that
-the deviation of the density is sufficiently small. These two comments
-indicates that one wants to feel how good or bad about the 10 Bar error.} \recheck{Done}]
+% [{\color{blue} {COMMENT1:} Can we have a trajectory figure of the pressure?
+% It will show that the fluctuation is large and the 10 Bar error for ZM looks
+% small. If there is a suitable one, it may be good to put it in SI.} {%
+% \color{red} Could you explain why? The SD should be enough for our purpose.}%
+% ] [ {\color{blue} COMMENT2: Can we have some data on the (mass) density?
+% Some potential users of ZM\ may worry about the deviation of the density
+% from the reality due to the pressure error. I remember that the density
+% error for ZM was small. It is helpful to show that the deviation of the
+% density is sufficiently small. These two comments indicates that one wants
+% to feel how good or bad about the 10 Bar error.} {\color{red} Done}][ {%
+% \color{blue} Thank you very much for your consideration of the density. {%
+% COMMENT1: please see my question in the last page. COMMENT2: The deviation
+% of the pressure between the ZM and PME should be due to this density
+% deviation between the ZM and PME (0.1\%). Namely {0.1\% density deviation
+% should cause 10 atm deviation.}\ How about this confirmation? ---The
+% pressure by ZM\ in figs1\&2 was calculated with the NTV MD where the cell
+% size was determined by the \textit{PME} NTP. So, if we will do NTV MD with
+% the cell size determined by the \textit{ZM} NTP (which was used to calculate
+% the current density), and if we calculate the pressure by ZM with this new
+% NTV, then we should have 1 atm pressure for may cutoff lengths. If this is
+% true, then we can show that the 10 atm deviation from the PME is not the
+% serious problem but a tiny density deviation issue.--- How about this idea? }%
+% }]
 
 % \begin{table}
 %   \centering
@@ -500,9 +518,9 @@ highly consistent with the SPME result, and $l=2$ seems the best. In the
 system of larger size ($L_{1}$), the accuracies of the ZM method is less for
 order $l\geq 2$, while they may be in still acceptable accuracy. In both
 systems, ZM $l=1$ presents an artificial oscillation around the cut-off
-radius (1.2~nm), while this oscillation is not obvious for $l\geq 2$. 
-The Kirkwood-G factor computed by ZM in system $S_{1}$ is as
-good as that computed in $M_{1}$, and is presented in SI.
+radius (1.2~nm), while this oscillation is not obvious for $l\geq 2$. The
+Kirkwood-G factor computed by ZM in system $S_{1}$ is as good as that
+computed in $M_{1}$, and is presented in SI.
 
 \begin{figure}[tbp]
 \centering
@@ -568,9 +586,9 @@ as shown in Fig.~\ref{fig:conv-vis}. It is clear that the integral for the
 RF method converges at 6~ps, while the ZM method converges only in 2~ps,
 which is consistent with the SPME result. The value of ZM $l=1$ method is
 different from the rest ZM methods and SPME result, but the results was
-improved by the damping effect as shown in Fig.~\ref{fig:conv-vis-damp}. 
-Similar to the behaviors seen in Fig.~\ref{fig:conv-vis}, the
-convergence is quick for a large $\alpha $.
+improved by the damping effect as shown in Fig.~\ref{fig:conv-vis-damp}.
+Similar to the behaviors seen in Fig.~\ref{fig:conv-vis}, the convergence is
+quick for a large $\alpha $.
 
 \subsection{Structure property}
 
@@ -586,34 +604,43 @@ by a vertical black line. For ZM method, the splitting parameter $\protect%
 \end{figure}
 
 We plot in Fig.~\ref{fig:rdf} the center-of-mass radial distribution
-functions (RDFs) of TIP3P water calculated by the SPME, ZM ($l=1,2,3$ and $4$)
-with $\alpha =0$\ and RF methods. It is observed from the figure that the
+functions (RDFs) of TIP3P water calculated by the SPME, ZM ($l=1,2,3$ and $4$%
+) with $\alpha =0$\ and RF methods. It is observed from the figure that the
 ZM RDFs are consist very well with the SPME RDF, except oscillations around
 the cut-off radius. This oscillations are not so large, as the maximum
-magnitude of the discrepancies from the SPME is about $1.9\%$
-for $l=1$ and ${0.3\%}$ for $l=2$, % {[} {\color{blue}
+magnitude of the discrepancies from the SPME is about $1.9\%$ for $l=1$ and $%
+{0.3\%}$ for $l=2$, % {[} {\color{blue}
 % "$2\%"$ is just my guess. How about stating here the maximum error for
 % individual $l$}]
-but should be artificial. However, higher order
-ZM method present lower amplitude oscillation, and when $l\geq 3$, the
-improvement is dramatic and the oscillation is almost negligible.
+but should be artificial. However, higher order ZM method present lower
+amplitude oscillation, and when $l\geq 3$, the improvement is dramatic and
+the oscillation is almost negligible. \recheck{The RF RDF is more accurate than the ZM ones,
+this is mainly because of the group cut-off used in simulating with RF. When changing
+the cut-off scheme to atom scheme, the accuracy is RF is roughly same as ZM $l=1$ (see SI).
+We could not explain the reason, but the numerical evidence suggests if only the RDF is
+of interest, a group cut-off scheme or higher order of ZM is preferable.
+}
 
-{\color{red} Shall we comment here on the fact that group cut-off produces
-smoother RDF? Add figures in Supplementary material {\color{blue} Do you
-mean the reason of the goodness in RF?} {\color{red} Yes, shall we discuss
-it? or it is too complicated and not very relevant to the current paper?}[} {%
-\color{blue} It is preferable to write it if the reason of the goodness is
-clear. Anyway, please describe.... This is the only matter ZM is inferior to
-RF. So, it may be interesting if the reason is clear. } {\color{red} I
-agree, if the reason is not clear for us, we should not touch this topic.}][ 
-{\color{blue} COMMENT: Thank you very much for the O-O RDF. If you have time
-to reconsider this issue, it may be useful to calculate the RDF with H-H
-length (MD trajectory also remains). Deviations should be larger for H-H
-than O-O, but this is my guess: (1) eventually COG-COG is near O-O, sorry I
-did not notice.; (2) RDF deviations appear in 0.6 nm width around the cutoff
-and the H-H length is just the twice of this 0.6 nm). Rather, the true
-reason may be other, e.g., group cuotff MD scheme may intrinsically give the
-accracy at least for RDF. }]
+
+% {\color{red} Shall we comment here on the fact that group cut-off produces
+% smoother RDF? Add figures in Supplementary material {\color{blue} Do you
+% mean the reason of the goodness in RF?} {\color{red} Yes, shall we discuss
+% it? or it is too complicated and not very relevant to the current paper?}[} {%
+% \color{blue} It is preferable to write it if the reason of the goodness is
+% clear. Anyway, please describe.... This is the only matter ZM is inferior to
+% RF. So, it may be interesting if the reason is clear. } {\color{red} I
+% agree, if the reason is not clear for us, we should not touch this topic.}][ 
+% {\color{blue} COMMENT: Thank you very much for the O-O RDF. If you have time
+% to reconsider this issue, it may be useful to calculate the RDF with H-H
+% length (MD trajectory also remains). Deviations should be larger for H-H
+% than O-O, but this is my guess: (1) eventually COG-COG is near O-O, sorry I
+% did not notice.; (2) RDF deviations appear in 0.6 nm width around the cutoff
+% and the H-H length is just the twice of this 0.6 nm). Rather, the true
+% reason may be other, e.g., group cuotff MD scheme may intrinsically give the
+% accracy at least for RDF. }][{\color{blue} COMMENT: Thank you very much for
+% the HH trial. The reason may be other. Since we do not have the reason why
+% RF was so good, one choice is the deletion of the RF data in the RDF. How do
+% you think about it?}]
 
 \begin{figure}[tbp]
 \centering
@@ -675,22 +702,21 @@ for dynamical quantities including diffusion constant and viscosity, and
 significantly for the RDF. Whereas a smaller order is preferable for the
 pressure, though $l=1,2$\ are similar.
 
-At cut-off radius of 1.2~nm, the recommended choices of
-parameters for TIP3P system are thus $\alpha \leq 1$~$\text{nm}^{-1}$ and $%
-l=2$ or $l=3$. Using these parameters, the ZM method achieves almost perfect
-accuracy in computing the excess chemical potential, constant
-volume/pressure heat capacity, isothermal compressibility, thermal expansion
-coefficient, dielectric constant diffusion constant and viscosity. The order 
-$l=2$ performs better in reproducing the pressure than $l=3$ (10
-v.s.~17~Bar), but worse in calculating the RDF (0.2\% error v.s.~almost
-negligible). Both of orders 2 and 3 are not sensitive to the splitting
-parameter up to 1.0~$\text{nm}^{-1}$. Although further
-increasing the splitting parameter will push the accuracy of RDF in case $%
-l=2 $ to as high as $l=3$, the pressure accuracy decreases (anti-damping
-effect), so that $\alpha >1$\ for $l=2$ or $l=3$ is not recommended. It
-should be noticed that the recommended parameters indicate $5$\% error
-(largest) in calculating the Kirkwood-G factor for a larger system ($L_{1}$
-containing 13,824 molecules).  If we seek more
+At cut-off radius of 1.2~nm, the recommended choices of parameters for TIP3P
+system are thus $\alpha \leq 1$~$\text{nm}^{-1}$ and $l=2$ or $l=3$. Using
+these parameters, the ZM method achieves almost perfect accuracy in
+computing the excess chemical potential, constant volume/pressure heat
+capacity, isothermal compressibility, thermal expansion coefficient,
+dielectric constant diffusion constant and viscosity. The order $l=2$
+performs better in reproducing the pressure than $l=3$ (10 v.s.~17~Bar), but
+worse in calculating the RDF (0.2\% error v.s.~almost negligible). Both of
+orders 2 and 3 are not sensitive to the splitting parameter up to 1.0~$\text{%
+nm}^{-1}$. Although further increasing the splitting parameter will push the
+accuracy of RDF in case $l=2 $ to as high as $l=3$, the pressure accuracy
+decreases (anti-damping effect), so that $\alpha >1$\ for $l=2$ or $l=3$ is
+not recommended. It should be noticed that the recommended parameters
+indicate $5$\% error (largest) in calculating the Kirkwood-G factor for a
+larger system ($L_{1}$ containing 13,824 molecules). If we seek more
 accuracy for the G factor, we should use a larger cut-off radius at the
 expense of the computational time. 
 % Further increasing the splitting paraemter
@@ -725,18 +751,28 @@ SPME. But is SPME with rc=1.0 nm along with the buffer length 0.2nm (are
 they default length?) faster than ZM\ with rc=1.2 nm along with the buffer
 length 0.3nm?? }]
 
+
 \appendix
 
 \section{Implementation of atom cut-off scheme in Gromacs}
+
 \label{app:cut-off}
 
-The Gromacs code 4.6 does not directly 
-support the atomistic cut-off scheme for tabulated electrostatic interaction that is
-needed for ZM method. The atom cut-off scheme can be implemented
-by using the default ``\texttt{Group}'' neighbor searching method, while setting
-the radius of neighbor list ``\texttt{rlist}'' 0.3~nm larger than the cut-off radius,
-which is the maximum of the electrostatic cut-off ``\texttt{rcoulomb}'' and the van der Waals cut-off ``\texttt{rvdw}''.
-Due to the buffering region that is of thickness 0.3~nm, the atom cut-off scheme in Gromacs is in general more expensive than the group cut-off scheme.
+The Gromacs code 4.6 does not directly support the atomistic cut-off scheme, 
+{\color{blue}which is recommended in the ZM method, in }using tabulated
+electrostatic interaction. The atom cut-off scheme can be implemented by
+using the default \textquotedblleft \texttt{Group}\textquotedblright\
+neighbor searching method, while setting the radius of neighbor list
+\textquotedblleft \texttt{rlist}\textquotedblright\ 0.3~nm larger than the
+cut-off radius, which is the maximum of the electrostatic cut-off
+\textquotedblleft \texttt{rcoulomb}\textquotedblright\ and the van der Waals
+cut-off \textquotedblleft \texttt{rvdw}\textquotedblright . Due to the
+buffering region that is of thickness 0.3~nm, the atom cut-off scheme in
+Gromacs is in general \recheck{twice} expensive \recheck{in computing the electrostatic interaction} as the group cut-off scheme.
+\recheck{It should be pointed out that this implementation is not optimal,
+  when the gromacs build-in atom cut-off scheme supports the tablulated potential, we expect better performance of ZM method.}
+% {%
+% \color{blue}How much? (just my interest)}
 
 \section{The computation of benchmark quantities}
 
@@ -744,15 +780,23 @@ Due to the buffering region that is of thickness 0.3~nm, the atom cut-off scheme
 
 In this section we provide the formula used for computing the benchmark
 quantities. We assume that there are $N$ molecules in the water system. The
-position and configuration of each molecule are fully described by $\{\vect r_{3i-2},\mathbf{\mathit{r}}_{3i-1},\mathbf{\mathit{r}}
+position and configuration of each molecule are fully described by $\{%
+\mathbf{\mathit{r}}_{3i-2},\mathbf{\mathit{r}}_{3i-1},\mathbf{\mathit{r}}%
 _{3i}\},\,i\in 1,\cdots ,N$, and the corresponding velocities are denoted by 
 $\{\mathbf{\mathit{v}}_{3i-2},\mathbf{\mathit{v}}_{3i-1},\mathbf{\mathit{v}}%
-_{3i}\},\,i\in 1,\cdots ,N$. The mass of each atom is denoted by $m_{i}$.[ {%
-\color{blue} minor: I like bold font a little bit for $\mathbf{\mathit{r}}${%
-\ and }$\mathbf{\mathit{v}}${\ as in the first version, which is also seen
-in }$\boldsymbol{\mu }_{i}${. (In particular, }$\mathbf{\mathit{r}}${\ seems
-the distance, not vector. $\mathbf{\mathit{r}}$ appears below also. But if
-you like this font, please use it also for $\boldsymbol{\mu }_{i}$)}} \recheck{I prefer the original one, I did not change it. I guess your program did it automatically. I suggest you compile this file with standard latex that dose not do any automatic change to the source file!. Now I change the one of them back, please see if it works on your machine}]
+_{3i}\},\,i\in 1,\cdots ,N$. The mass of each atom is denoted by $m_{i}$.
+% [ {%
+% \color{blue} minor: I like bold font a little bit for $\mathbf{\mathit{r}}${%
+% \ and }$\mathbf{\mathit{v}}${\ as in the first version, which is also seen
+% in }$\boldsymbol{\mu }_{i}${. (In particular, }$\mathbf{\mathit{r}}${\ seems
+% the distance, not vector. $\mathbf{\mathit{r}}$ appears below also. But if
+% you like this font, please use it also for $\boldsymbol{\mu }_{i}$)}} {%
+% \color{red} I prefer the original one, I did not change it. I guess your
+% program did it automatically. I suggest you compile this file with standard
+% latex that dose not do any automatic change to the source file!. Now I
+% change the one of them back, please see if it works on your machine}][ {%
+% \color{blue} Sorry, maybe this is just the problem of my program, now I can
+% see }$\mathbf{\mathit{r}}_{3i-2}${\ to be bold in your original pdf.}]
 
 \subsection{Radial distribution function}
 
@@ -894,7 +938,8 @@ where
 \mathbf{\mathit{M }} = \sum_i\boldsymbol{\mu}_i = \sum_{\alpha\in i} q_\alpha%
 \mathbf{\mathit{r}}_\alpha
 \end{align}
-is the total dipole moment of the system. Since it is a fluctuation, and is calculated by NVT simulations of $S_1$. 
+is the total dipole moment of the system. Since it is a fluctuation, and is
+calculated by NVT simulations of $S_1$. 
 % The results are listed in Tab.~\ref{tab:tmp2}. The dielectric constant calculated in system $\systemsb$ is reported in Table.~\ref{tab:thermo}.
 
 \subsection{Kirkwood G-factor}
@@ -917,7 +962,8 @@ _i(t) - \mathbf{\mathit{r}}_i(0)\vert^2\rangle.
 \end{align}
 In practice, the mean-square-displacement $\langle\vert \mathbf{\mathit{r}}%
 _i(t) - \mathbf{\mathit{r}}_i(0)\vert^2\rangle$ is calculated, then the
-value is linearly fitted. It is calculated by NVT simulations of system $S_1$.
+value is linearly fitted. It is calculated by NVT simulations of system $S_1$%
+.
 
 \subsection{Viscosity}
 
@@ -947,6 +993,22 @@ The values listed in Table~\ref{tab:thermo} are computed with $I_{\eta }(10\,%
 \text{ps})$. The quantity is calculated by NVT simulations of system $S_{1}$.
 
 \newpage
+
+{\color{blue} Question1: I see that the statistical uncertainty is twice of
+the standard deviation of time series.\ Let $\{A(x(t),p(t))\}_{t\in \Lambda }
+${\ be time series of physical quantity }$A(x,p)${. Then I want to confirm
+how you defined the average and the standard deviation. (i) Are they for }$%
+\{A(x(t),p(t))\}_{t\in \Lambda }${\ itself? (ii) }Or are they {for }$\left\{ 
+\frac{1}{t}\int_{0}^{t}A(x(s),p(s))ds\right\} _{t\in \Lambda }${? }}
+
+{\color{blue}Maybe (ii) is correct. But "100~Bar" in the description "the
+fluctuation (measured by standard deviation) of the pressure is roughly
+100~Bar" should come from (i). If so, I proposed the presentation of the
+trajectory of pressures $\{P(x(t),p(t))\}_{t\in \Lambda }$ in SI.}
+
+{\color{blue}Question2 (this is just from my interest): When you did the ZM
+NTP with P-R method, how was the cell shape? You obtained the good density,
+but how about the cell deformation? Was it keep almost the cubic structure?}
 
 % \bibliographystyle{plain}
 \bibliographystyle{plain}
