--- a/writedown/zm/paper.water/ref.bib
+++ b/writedown/zm/paper.water/ref.bib
@@ -1,3 +1,12 @@
+@Book{frenkel2001understanding,
+  Title                    = {Understanding molecular simulation},
+  Author                   = {Frenkel, D. and Smit, B.},
+  Publisher                = {Academic Press, Inc. Orlando, FL, USA},
+  Year                     = {2001},
+
+  File                     = {frenkel2001understanding.pdf:frenkel2001understanding.pdf:PDF},
+  Timestamp                = {2010.09.22}
+}
 
 @Article{prinz2011markov,
   Title                    = {Markov models of molecular kinetics: Generation and validation},
