--- a/writedown/zm/paper.water/si.tex
+++ b/writedown/zm/paper.water/si.tex
@@ -159,13 +159,13 @@ same size as the SPME, so they are not presented in the figure for clarity.
 \end{figure}
 
 
-\begin{figure}[tbp]
-\centering
-\includegraphics[]{fig/result.nvt/fig-rdf-cutoff.eps}\\
-\caption{  The comparison between the RDF calculated by RF method with group and atom cut-off schemes.
-The results of SPME and ZM $l=1$ are also presented for comparison.}
-\label{fig:gkr-conv-alpha}
-\end{figure}
+% \begin{figure}[tbp]
+% \centering
+% \includegraphics[]{fig/result.nvt/fig-rdf-cutoff.eps}\\
+% \caption{  The comparison between the RDF calculated by RF method with group and atom cut-off schemes.
+% The results of SPME and ZM $l=1$ are also presented for comparison.}
+% \label{fig:gkr-conv-alpha}
+% \end{figure}
 
 
 \newpage 
